--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flight-data",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
