--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "SET NODE_ENV=development&&nodemon server.ts"
   },
   "keywords": [],
   "author": "",
