--- a/package.json
+++ b/package.json
@@ -4,18 +4,32 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "SET NODE_ENV=development&&nodemon server.ts"
+    "start:dev": "SET NODE_ENV=development&&nodemon server.js",
+    "start:prod": "SET NODE_ENV=production&&nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "express-async-error": "^0.0.2",
+    "mongoose": "^6.5.4",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.7",
+    "morgan": "^1.10.0",
+    "prettier": "^2.7.1"
   }
 }
