--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-error": "^0.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "validator": "^13.7.0"
   },
