added getAtis and getMetar function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,10 @@
     "prettier"
   ],
   "rules": {
+    "indent": [
+      "error",
+      4
+    ],
     "prettier/prettier": "error",
     "spaced-comment": "off",
     "no-console": "warn",
