--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "flight-data",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=16.17.0"
+  },
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -19,10 +22,14 @@
     "express-async-error": "^0.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "morgan": "^1.10.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.23.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
+    "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -30,7 +37,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
-    "morgan": "^1.10.0",
     "prettier": "^2.7.1"
   }
 }
