--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
