--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "request": "^2.88.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
