--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
+    "jsdom": "^20.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -39,6 +45,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
-    "prettier": "^2.7.1"
+    "jsdoc": "^3.6.11",
+    "prettier": "^2.7.1",
+    "pretty": "^2.0.0"
   }
 }
