--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "puppeteer": "^18.0.5",
     "request": "^2.88.2",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
