--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hpp": "^0.2.3",
     "jsdom": "^20.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "puppeteer": "^18.0.5",
