added getAirportsDistance controller to calculate the distance between origin airport and destination airport

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,12 @@
     "prettier"
   ],
   "rules": {
+    //        "newline-per-chained-call": [
+    //            "error",
+    //            {
+    //                "ignoreChainWithDepth": 1
+    //            }
+    //        ],
     "camelcase": "off",
     "indent": [
       "error",
