--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "puppeteer": "^18.0.5",
     "request": "^2.88.2",
     "validator": "^13.7.0",
+    "xml2js": "^0.4.23",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
