--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "puppeteer": "^18.0.5",
     "request": "^2.88.2",
+    "underscore": "^1.13.6",
     "validator": "^13.7.0",
     "xml2js": "^0.4.23",
     "xss-clean": "^0.1.1"
