--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
