--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,58 +1,52 @@
 {
-  "extends": [
-    "airbnb",
-    "prettier",
-    "plugin:node/recommended"
-  ],
-  "plugins": [
-    "prettier"
-  ],
   "env": {
     "browser": true,
-    "es2021": true,
-    "node": true
+    "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "parser": "@babel/eslint-parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "airbnb"
+  ],
+  "overrides": [
+  ],
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": [
+    "react"
+  ],
   "rules": {
-    "camelcase": "off",
+    //      "indent": [4, "tab", { "SwitchCase": 1, "VariableDeclarator": 1 }]
     "indent": [
       "error",
       4
     ],
-    "prettier/prettier": "error",
-    "spaced-comment": "off",
-    "no-console": "warn",
-    "consistent-return": "off",
-    "func-names": "off",
-    "object-shorthand": "off",
-    "no-process-exit": "off",
-    "no-param-reassign": "off",
-    "no-return-await": "off",
-    "no-underscore-dangle": "off",
-    "class-methods-use-this": "off",
-    "no-plusplus": [
+    "react/jsx-indent": [
       "error",
-      {
-        "allowForLoopAfterthoughts": true
-      }
+      4
     ],
-    "prefer-destructuring": [
+    "react/jsx-indent-props": [
       "error",
-      {
-        "object": true,
-        "array": false
-      }
+      4
     ],
-    "no-unused-vars": [
+    "quotes": [
       "error",
-      {
-        "argsIgnorePattern": "req|res|next|val"
-      }
-    ]
+      "double"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "react/prop-types": 0,
+    "linebreak-style": [
+      "error",
+      "windows"
+    ],
+    "camelcase": "off",
+    "react-no-array-index-key": 0,
+    "no-unused-vars": "off",
+    "no-restricted-syntax": "off"
   }
 }
