--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "shippedProposals": true
-      }
+      "@babel/preset-react"
     ]
   ]
 }
