--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,16 @@
     "camelcase": "off",
     "react-no-array-index-key": 0,
     "no-unused-vars": "off",
-    "no-restricted-syntax": "off"
+    "no-restricted-syntax": "off",
+    "react/jsx-props-no-spreading": "off",
+    "implicit-arrow-linebreak": "off",
+    "react/button-has-type": "off",
+    "import/prefer-default-export": "off",
+    "no-trailing-spaces": "off",
+    "no-multi-spaces": "off",
+    "react/jsx-props-no-multi-spaces": "off",
+    "no-multiple-empty-lines": "off",
+    "consistent-return": "off",
+    "max-len": "off"
   }
 }
