--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "babel-eslint": "^6.0.0",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
