--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
     "react/jsx-props-no-multi-spaces": "off",
     "no-multiple-empty-lines": "off",
     "consistent-return": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "no-nested-ternary": "off"
   }
 }
