--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,8 @@
     "no-multiple-empty-lines": "off",
     "consistent-return": "off",
     "max-len": "off",
-    "no-nested-ternary": "off"
+    "no-nested-ternary": "off",
+    "react/jsx-no-useless-fragment": "off",
+    "react/no-unstable-nested-components": "off"
   }
 }
