added airport info to expanded row

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,7 +61,9 @@
     "no-nested-ternary": "off",
     "react/jsx-no-useless-fragment": "off",
     "react/no-unstable-nested-components": "off",
-    "jsx-a11y/click-events-have-key-events":"off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "no-underscore-dangle": "off"
   }
 }
