--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "eslint-plugin-jsx": "^0.1.0",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
