--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "eslint-plugin-jsx": "^0.1.0",
+    "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "react-table": "^7.8.0",
+    "rsuite": "^5.37.0",
     "styled-components": "^6.0.3",
     "web-vitals": "^2.1.4"
   },
@@ -58,6 +60,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
