--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
-    "classnames": "^2.3.2",
-    "eslint-plugin-jsx": "^0.1.0",
-    "framer-motion": "^10.12.18",
-    "react": "^18.2.0",
-    "react-country-flag": "^3.1.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-paginate": "^8.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.7.3",
-    "react-table": "^7.8.0",
-    "rsuite": "^5.37.0",
-    "styled-components": "^6.0.3",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "H:/node-js-project/Flight-Data-Full-Stack/Airports_Data/node_modules/.bin/react-scripts start",
-    "build": "node_modules/.bin/react-scripts build",
-    "test": "node_modules/.bin/react-scripts test",
-    "eject": "node_modules/.bin/react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "babel-eslint": "^6.0.0",
-    "eslint": "^8.22.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.7",
-    "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.2.7"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.3.4",
+        "classnames": "^2.3.2",
+        "eslint-plugin-jsx": "^0.1.0",
+        "framer-motion": "^10.12.18",
+        "react": "^18.2.0",
+        "react-country-flag": "^3.1.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
+        "react-paginate": "^8.2.0",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.9.0",
+        "react-scripts": "5.0.1",
+        "react-select": "^5.7.3",
+        "react-table": "^7.8.0",
+        "rsuite": "^5.37.0",
+        "styled-components": "^6.0.3",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "H:/node-js-project/Flight-Data-Full-Stack/Airports_Data/node_modules/.bin/react-scripts start",
+        "build": "node_modules/.bin/react-scripts build",
+        "test": "node_modules/.bin/react-scripts test",
+        "eject": "node_modules/.bin/react-scripts eject",
+        "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
+        "babel-eslint": "^6.0.0",
+        "eslint": "^8.22.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.7",
+        "postcss-import": "^15.1.0",
+        "tailwindcss": "^3.2.7"
+    }
 }
