--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "classnames": "^2.3.2",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
+        "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-leaflet": "^4.2.1",
         "react-paginate": "^8.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.9.0",
