--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-iframe": "^1.8.5",
         "react-leaflet": "^4.2.1",
         "react-paginate": "^8.2.0",
         "react-redux": "^8.0.5",
