--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "proxy": "https://www.avionio.com",
     "dependencies": {
+        "-": "^0.0.1",
         "@reduxjs/toolkit": "^1.9.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -11,6 +13,7 @@
         "classnames": "^2.3.2",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
+        "http-proxy-middleware": "^2.0.6",
         "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-country-flag": "^3.1.0",
@@ -25,6 +28,7 @@
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
         "rsuite": "^5.37.0",
+        "save-dev": "^0.0.1-security",
         "styled-components": "^6.0.3",
         "web-vitals": "^2.1.4"
     },
