--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "postinstall": "npm run webpack",
+        "webpack": "webpack",
         "start": "H:/node-js-project/Flight-Data-Full-Stack/Airports_Data/node_modules/.bin/react-scripts start",
         "build": "node_modules/.bin/react-scripts build",
         "test": "node_modules/.bin/react-scripts test",
