--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.7",
         "postcss-import": "^15.1.0",
-        "tailwindcss": "^3.2.7"
+        "tailwindcss": "^3.2.7",
+        "webpack-cli": "^5.1.4"
     }
 }
