--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "scripts": {
         "postinstall": "npm run webpack",
         "webpack": "webpack",
-        "start": "H:/node-js-project/Flight-Data-Full-Stack/Airports_Data/node_modules/.bin/react-scripts start",
+        "start-js": "react-scripts start",
+        "start": "react-scripts start",
         "build": "node_modules/.bin/react-scripts build",
         "test": "node_modules/.bin/react-scripts test",
         "eject": "node_modules/.bin/react-scripts eject",
