--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
         "webpack": "webpack",
         "start-js": "react-scripts start",
         "start": "react-scripts start",
-        "build": "node_modules/.bin/react-scripts build",
-        "test": "node_modules/.bin/react-scripts test",
-        "eject": "node_modules/.bin/react-scripts eject",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
         "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css"
     },
     "eslintConfig": {
