--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "http-proxy-middleware": "^2.0.6",
         "leaflet": "^1.9.4",
         "react": "^18.2.0",
+        "react-container-dimensions": "^1.4.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
