--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "http-proxy-middleware": "^2.0.6",
         "leaflet": "^1.9.4",
         "react": "^18.2.0",
+        "react-audio-player": "^0.17.0",
         "react-container-dimensions": "^1.4.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
         "react-iframe": "^1.8.5",
         "react-leaflet": "^4.2.1",
         "react-paginate": "^8.2.0",
+        "react-photo-album": "^2.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
