--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-container-dimensions": "^1.4.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
+        "react-h5-audio-player": "^3.8.6",
         "react-icons": "^4.8.0",
         "react-iframe": "^1.8.5",
         "react-leaflet": "^4.2.1",
