--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
-        "react-container-dimensions": "^1.4.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
         "react-h5-audio-player": "^3.8.6",
@@ -77,6 +76,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.7",
+        "firebase-tools": "^12.5.3",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
         "webpack-cli": "^5.1.4"
