Change the github workflows script

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -3,18 +3,18 @@
 
 name: Deploy to Firebase Hosting on merge
 'on':
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master
 jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: npm ci & npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AIRPORT_WEATHER_56126 }}'
-          channelId: live
-          projectId: airport-weather-56126
+    build_and_deploy:
+        runs-on: ubuntu-latest
+        steps:
+            -   uses: actions/checkout@v3
+            -   run: npm i & npm run build
+            -   uses: FirebaseExtended/action-hosting-deploy@v0
+                with:
+                    repoToken: '${{ secrets.GITHUB_TOKEN }}'
+                    firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AIRPORT_WEATHER_56126 }}'
+                    channelId: live
+                    projectId: airport-weather-56126
