--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
-            -   run: npm i & npm run build
+            -   run: npm run test --if-present
+                env:
+                    CI:false
             -   uses: FirebaseExtended/action-hosting-deploy@v0
                 with:
                     repoToken: '${{ secrets.GITHUB_TOKEN }}'
