--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
-            -   run: npm run test --if-present
+            -   run: npm i --force && npm run build
                 env:
                     CI: false
             -   uses: FirebaseExtended/action-hosting-deploy@v0
