--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "firebase-tools": "^12.5.3",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
+        "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
     }
 }
