--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "leaflet": "^1.9.4",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
+        "react-awesome-lightbox": "^1.8.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
         "react-h5-audio-player": "^3.8.6",
