--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "react-photo-album": "^2.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.9.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
         "rsuite": "^5.37.0",
