--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,6 +65,16 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "react/jsx-one-expression-per-line": "off",
         "no-underscore-dangle": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "react/no-unknown-property": [
+            "error",
+            {
+                "ignore": [
+                    "args",
+                    "position",
+                    "intensity"
+                ]
+            }
+        ]
     }
 }
