--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     },
     "dependencies": {
         "-": "^0.0.1",
-        "@react-three/drei": "^9.88.16",
-        "@react-three/fiber": "^8.15.11",
         "@reduxjs/toolkit": "^1.9.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/three": "^0.158.2",
         "axios": "^1.3.4",
+        "cesium": "^1.111.0",
         "classnames": "^2.3.2",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
@@ -38,11 +36,11 @@
         "react-scripts": "^5.0.1",
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
+        "resium": "^1.17.2",
         "rsuite": "^5.37.0",
         "save-dev": "^0.0.1-security",
         "styled-components": "^6.0.3",
         "swr": "^2.2.4",
-        "three": "^0.158.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
