--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
         "axios": "^1.3.4",
         "cesium": "^1.111.0",
         "classnames": "^2.3.2",
@@ -33,7 +34,6 @@
         "react-photo-album": "^2.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.9.0",
-        "react-scripts": "^5.0.1",
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
         "resium": "^1.17.2",
@@ -41,16 +41,18 @@
         "save-dev": "^0.0.1-security",
         "styled-components": "^6.0.3",
         "swr": "^2.2.4",
+        "vite": "^5.0.0",
+        "vite-plugin-commonjs": "^0.10.1",
+        "vite-plugin-svgr": "^4.2.0",
+        "vite-tsconfig-paths": "^4.2.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "postinstall": "npm run webpack",
         "webpack": "webpack",
-        "start-js": "react-scripts start",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "start": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
         "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css"
     },
     "eslintConfig": {
@@ -73,6 +75,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
+        "autoprefixer": "^10.4.16",
         "babel-eslint": "^6.0.0",
         "eslint": "^8.22.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -83,6 +86,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.7",
         "firebase-tools": "^12.5.3",
+        "postcss": "^8.4.31",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
         "webpack": "^5.88.2",
