--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "postcss": "^8.4.31",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
+        "vite-plugin-cesium": "^1.2.22",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
     }
