--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
         "axios": "^1.3.4",
         "cesium": "^1.111.0",
         "classnames": "^2.3.2",
+        "deck.gl": "^8.9.33",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
+        "gl-matrix": "^3.4.3",
         "http-proxy-middleware": "^2.0.6",
         "leaflet": "^1.9.4",
         "lodash": "^4.17.21",
+        "mapbox-gl": "^3.0.1",
+        "maplibre-gl": "^3.6.2",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
@@ -30,6 +34,7 @@
         "react-icons": "^4.8.0",
         "react-iframe": "^1.8.5",
         "react-leaflet": "^4.2.1",
+        "react-map-gl": "^7.1.6",
         "react-paginate": "^8.2.0",
         "react-photo-album": "^2.3.0",
         "react-redux": "^8.0.5",
@@ -85,7 +90,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.7",
-        "firebase-tools": "^12.5.3",
+        "firebase-tools": "^13.0.1",
         "postcss": "^8.4.31",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
