--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/mapbox-gl": "^2.7.19",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "axios": "^1.3.4",
         "cesium": "^1.111.0",
