--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/mapbox-gl": "^2.7.19",
+        "@types/react": "^18.2.46",
+        "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "axios": "^1.3.4",
         "cesium": "^1.111.0",
