--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/mapbox-gl": "^2.7.19",
-        "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@types/react-redux": "^7.1.33",
         "@vitejs/plugin-react-swc": "^3.5.0",
@@ -88,6 +87,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react": "18.2.00",
         "@babel/preset-react": "^7.18.6",
         "@types/leaflet": "^1.9.8",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
