testing out the new map style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,10 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx",
-        "paths": {
-            "react": ["node_modules/@types/react"]
-        }
+        "jsx": "react-jsx"
+        //        "paths": {
+        //            "react": ["node_modules/@types/react"]
+        //        }
     },
     "include": [
         "src"
