--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@deck.gl/layers": "^8.9.33",
         "@deck.gl/mapbox": "^8.9.33",
         "@deck.gl/react": "^8.9.33",
+        "@loaders.gl/core": "^3.4.14",
+        "@loaders.gl/gltf": "^3.4.14",
         "@preact/signals-react": "^2.0.0",
         "@reduxjs/toolkit": "^1.9.3",
         "@testing-library/jest-dom": "^5.16.5",
