--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
         //        }
     },
     "include": [
-        "src"
+        "src",
+        "type/**/*",
     ],
     "references": [
         {
