--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-router-dom": "^6.9.0",
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
+        "redux-persist": "^6.0.0",
         "resium": "^1.17.2",
         "rsuite": "^5.53.2",
         "save-dev": "^0.0.1-security",
