--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@turf/turf": "^6.5.0",
         "@types/mapbox-gl": "^2.7.19",
         "@types/react-dom": "^18.2.18",
         "@types/react-redux": "^7.1.33",
