remove lightbox from the Orion photo wall

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         ],
         "allowJs": false,
         "skipLibCheck": true,
-        "esModuleInterop": false,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": false,
         "forceConsistentCasingInFileNames": true,
@@ -25,7 +25,7 @@
     },
     "include": [
         "src",
-        "type/**/*",
+        "type/**/*"
     ],
     "references": [
         {
