--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.7",
         "firebase-tools": "^13.0.1",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.38",
+        "postcss-100vh-fix": "^1.0.2",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
         "vite-plugin-cesium": "^1.2.22",
