--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "axios": "^1.3.4",
         "classnames": "^2.3.2",
         "deck.gl": "^8.9.33",
+        "dexie": "^4.0.7",
+        "dexie-react-hooks": "^1.1.7",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
         "http-proxy-middleware": "^2.0.6",
