--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
         "react-router-dom": "^6.9.0",
         "react-select": "^5.7.3",
         "react-table": "^7.8.0",
+        "react-virtualized-auto-sizer": "^1.0.24",
+        "react-window": "^1.8.10",
         "redux-persist": "^6.0.0",
         "rsuite": "^5.53.2",
         "save-dev": "^0.0.1-security",
