--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@
 .env.test.local
 .env.production.local
 
-.idea/compiler.xml
-.idea/material_theme_project_new.xml
+.idea/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
