--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -69,6 +69,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "A319": {
+        "x": 321,
+        "y": 1,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "A320": {
         "x": 286,
         "y": 606,
