update getIcon function to avoid empty icon shown on the map

--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -524,6 +524,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "CL30": {
+        "x": 1711,
+        "y": 1711,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "CRJ7": {
         "x": 1711,
         "y": 1996,
