--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -573,6 +573,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "DA40": {
+        "x": 2851,
+        "y": 571,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "DC3": {
         "x": 3136,
         "y": 571,
