remove aircraft filter if choosing airport in search box

--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -636,7 +636,21 @@
         "height": 283,
         "pixelRatio": "1"
     },
-    "E170": {
+    "E50P": {
+        "x": 1996,
+        "y": 1996,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
+    "E50P": {
+        "x": 1996,
+        "y": 1996,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
+    "C25C": {
         "x": 1996,
         "y": 2281,
         "width": 283,
