use context to pass viewState instead of children props

--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -440,6 +440,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "BT36": {
+        "x": 2566,
+        "y": 2281,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "C2": {
         "x": 2281,
         "y": 286,
@@ -469,6 +476,13 @@
         "pixelRatio": "1"
     },
     "C172": {
+        "x": 3421,
+        "y": 286,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
+    "C182": {
         "x": 3421,
         "y": 286,
         "width": 283,
@@ -713,6 +727,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "GL6T": {
+        "x": 2281,
+        "y": 1426,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "GLF6": {
         "x": 2281,
         "y": 1711,
@@ -811,6 +832,13 @@
         "height": 283,
         "pixelRatio": "1"
     },
+    "P46T": {
+        "x": 3136,
+        "y": 1426,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
     "PC6T": {
         "x": 3421,
         "y": 1426,
@@ -840,6 +868,13 @@
         "pixelRatio": "1"
     },
     "S61": {
+        "x": 2851,
+        "y": 2281,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
+    },
+    "S76": {
         "x": 2851,
         "y": 2281,
         "width": 283,
