--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@vitejs/plugin-react-swc": "^3.5.0",
         "@webgeodatavore/geojson.terminator": "^1.0.2",
         "axios": "^1.3.4",
+        "canvas": "^2.11.2",
         "classnames": "^2.3.2",
         "deck.gl": "^8.9.33",
         "dexie": "^4.0.7",
@@ -70,7 +71,7 @@
         "webpack": "webpack",
         "start": "vite",
         "build": "vite build",
-        "serve": "vite preview",
+        "serve": "vite preview --port 3000",
         "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css"
     },
     "eslintConfig": {
