--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "axios": "^1.3.4",
         "canvas": "^2.11.2",
         "classnames": "^2.3.2",
+        "comlink": "^4.4.1",
         "deck.gl": "^8.9.33",
         "dexie": "^4.0.7",
         "dexie-react-hooks": "^1.1.7",
@@ -114,6 +115,7 @@
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.3.3",
         "vite-plugin-cesium": "^1.2.22",
+        "vite-plugin-comlink": "^5.0.1",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
     }
