--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
         "postcss": "^8.4.38",
         "postcss-100vh-fix": "^1.0.2",
         "postcss-import": "^15.1.0",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.3.3",
         "vite-plugin-cesium": "^1.2.22",
         "vite-plugin-comlink": "^5.0.1",
