--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react-photo-album": "^2.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.9.0",
+        "react-tooltip": "^5.28.0",
         "react-virtualized-auto-sizer": "^1.0.24",
         "react-window": "^1.8.10",
         "redux-persist": "^6.0.0",
