--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-router-dom": "^6.9.0",
         "react-tooltip": "^5.28.0",
         "react-virtualized-auto-sizer": "^1.0.24",
+        "react-virtuoso": "^4.12.0",
         "react-window": "^1.8.10",
         "redux-persist": "^6.0.0",
         "rsuite": "^5.53.2",
