--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "axios": "^1.3.4",
         "canvas": "^2.11.2",
         "classnames": "^2.3.2",
+        "clsx": "^2.1.1",
         "deck.gl": "^8.9.33",
         "dexie": "^4.0.7",
         "dexie-react-hooks": "^1.1.7",
