--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.3.1",
         "react-h5-audio-player": "^3.8.6",
+        "react-helmet-async": "^2.0.5",
         "react-icons": "^4.8.0",
         "react-iframe": "^1.8.5",
         "react-leaflet": "^4.2.1",
