--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@webgeodatavore/geojson.terminator": "^1.0.2",
         "axios": "^1.3.4",
         "canvas": "^2.11.2",
+        "chroma-js": "^3.1.2",
         "classnames": "^2.3.2",
         "clsx": "^2.1.1",
         "deck.gl": "^8.9.33",
