--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@types/react-redux": "^7.1.33",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "@webgeodatavore/geojson.terminator": "^1.0.2",
-        "axios": "^1.3.4",
+        "axios": "1.7.4",
         "canvas": "^2.11.2",
         "chroma-js": "^3.1.2",
         "classnames": "^2.3.2",
@@ -35,7 +35,7 @@
         "dexie-react-hooks": "^1.1.7",
         "eslint-plugin-jsx": "^0.1.0",
         "framer-motion": "^10.12.18",
-        "http-proxy-middleware": "^2.0.6",
+        "http-proxy-middleware": "3.0.3",
         "immer": "^10.1.1",
         "leaflet": "^1.9.4",
         "lodash": "^4.17.21",
@@ -65,7 +65,7 @@
         "save-dev": "^0.0.1-security",
         "styled-components": "^6.0.3",
         "swr": "^2.2.4",
-        "vite": "^5.0.0",
+        "vite": "5.4.6",
         "vite-plugin-commonjs": "^0.10.1",
         "vite-plugin-svgr": "^4.2.0",
         "vite-tsconfig-paths": "^4.2.1",
@@ -119,7 +119,7 @@
         "postcss-import": "^15.1.0",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.3.3",
-        "webpack": "^5.88.2",
+        "webpack": "5.94.0",
         "webpack-cli": "^5.1.4"
     }
 }
