added new sprite sheet and mapping file

--- a/src/assets/mapbox/aircraft_sprite_mapping.json
+++ b/src/assets/mapbox/aircraft_sprite_mapping.json
@@ -908,5 +908,12 @@
         "width": 283,
         "height": 283,
         "pixelRatio": "1"
+    },
+    "B412": {
+        "x": 3136,
+        "y": 1996,
+        "width": 283,
+        "height": 283,
+        "pixelRatio": "1"
     }
 }
