--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -20,6 +19,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-uses-react": "off",
         "react/jsx-filename-extension": [
             1,
             {
@@ -28,7 +29,6 @@
                 ]
             }
         ],
-        //      "indent": [4, "tab", { "SwitchCase": 1, "VariableDeclarator": 1 }]
         "indent": [
             "error",
             4
