--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "singleQuote": false,
-  "tabWidth": 4
+    "singleQuote": false,
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "semi": true,
+    "printWidth": 100
 }
